# hs-opentelemetry-instrumentation-http-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  devenv.nix  hs-opentelemetry-instrumentation-http-client.cabal
bench/: StressTest.hs  otelconfig.yaml
src/OpenTelemetry/Instrumentation/: HttpClient.hs
