cabal-version:      3.4
name:               hs-opentelemetry-instrumentation-http-client
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Cachix
maintainer:         domen@cachix.org
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  OpenTelemetry.Instrumentation.HttpClient
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18
                    , bytestring
                    , hs-opentelemetry-api
                    , http-client
                    , http-types
                    , text
                    , unordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hs-opentelemetry-instrumentation-http-client-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        hs-opentelemetry-instrumentation-http-client
